--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title>React starter app</title>
+        <link rel="stylesheet" href="assets/tailwind.css"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="app"></div>
-        <script src="index.js"></script>
+    <script src="index.js"></script>
     </body>
 </html>
